--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -4,7 +4,8 @@
 @forward 'smooth-scroll';
 
 // Header Components
-@forward 'header/default-header';
 @forward 'header/shop-header';
 @forward 'header/sticky-header';
 @forward 'header/mobile-menu';
+@forward 'header/catalog-menu';
+@forward 'header/mega-menu';
