--- a/src/scss/components/_search_pop_up.scss
+++ b/src/scss/components/_search_pop_up.scss
@@ -117,7 +117,9 @@
     font-size: 40px;
 
     img {
-      max-height: 50px;
+      max-height: 80px;
+      object-fit: contain;
+      width: 100%;
     }
   }
 
