--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -44,7 +44,7 @@
 }
 
 
-.post-type-archive.post-type-archive-product, .single-product, .woocommerce-cart, .woocommerce-checkout {
+.post-type-archive.post-type-archive-product,.woocommerce-account, .single-product, .woocommerce-cart, .woocommerce-checkout {
   main#content{
     padding-top: 5vh;
   }
