--- a/src/scss/woocommerce/_index.scss
+++ b/src/scss/woocommerce/_index.scss
@@ -1,6 +1,7 @@
 @forward 'list';
 @forward 'single-product';
 @forward 'cart';
+@forward 'woocommerce';
 @forward 'checkout';
 @forward 'offcanvas-cart';
 @forward 'notifications';
