--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -21,14 +21,41 @@ $bg-light: #f9f9f9;
 $bg-dark: #f0f0f0;
 
 // Typography
-$font-family-base: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+// Aeonik Pro Font Faces
+@font-face {
+  font-family: 'Aeonik Pro';
+  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProRegular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Aeonik Pro';
+  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProMedium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Aeonik Pro';
+  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProBold.otf') format('opentype');
+  font-weight: 600 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+// Font Variables
+$font-family-base: 'Aeonik Pro';
 $font-size-base: 1rem; // 16px
 $font-size-sm: $font-size-base * 0.875; // 14px
 $font-size-lg: $font-size-base * 1.25;  // 20px
 $line-height-base: 1.5;
-$font-weight-normal: 400;
-$font-weight-medium: 500;
-$font-weight-bold: 700;
+$w-normal: 400;
+$w-medium: 500;
+$w-semibold: 600;
+$w-bold: 700;
 
 // Container max widths
 $container-max-widths: (
