--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -1,5 +1,5 @@
 @use '../abstracts' as *;
-$button-radius: 12px;
+$button-radius: 6px;
 
 
 .button-arrow {
@@ -12,6 +12,7 @@ $button-radius: 12px;
   line-height: 1;
   position: relative;
   transition: color 0.3s ease;
+  width: fit-content;
 
   &__icon {
     position: relative;
@@ -93,7 +94,7 @@ $button-radius: 12px;
     color: #f8f8f8;
 
     .button-arrow__icon {
-      border-color: rgba(248, 248, 248, 0.4);
+      border-color: $secondary-color;
     }
   }
 
@@ -102,7 +103,7 @@ $button-radius: 12px;
     color: #111;
 
     .button-arrow__icon {
-      border-color: rgba(0, 0, 0, 0.25);
+      border-color: $secondary-color;
     }
   }
 
