--- a/src/scss/blocks/_home-hero.scss
+++ b/src/scss/blocks/_home-hero.scss
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 15vh 0 5vh;
+    padding: 13vh 0 5vh;
     position: relative;
   }
 
@@ -53,7 +53,7 @@
 
   &__title {
     p {
-      font-size: clamp(2.5rem, 5.5vw, 5.6rem);
+      font-size: clamp(2.2rem, 5.5vw, 5.6rem);
       line-height: 1.05;
       font-weight: 400;
       margin-bottom: 1.5rem;
@@ -167,7 +167,7 @@
 
 
   @media (min-width: 1200px) {
-    min-height: 85vh;
+    min-height: 95vh;
   }
 
   @media (max-width: 991px) {
@@ -176,6 +176,16 @@
         position: static;
         margin-top: 1.5rem;
         flex-wrap: wrap;
+      }
+      &__inner {
+        position: static;
+        left:unset;
+        top: unset;
+        transform: unset;
+        z-index: 1;
+        margin: 0 auto;
+        padding: 1rem;
+        height: 100%;
       }
     }
   }
