home page clean fixes

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -69,3 +69,26 @@ input[type="submit"] {
     text-decoration: none;
   }
 }
+
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fcfcfc;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $primary-color;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
