home services and  products in progress

--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -1,3 +1,5 @@
 // Blocks : Small, reusable Blocks components
 @forward 'home-hero';
 @forward 'home_history';
+@forward 'home-services';
+@forward 'home-products';
