--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -9,3 +9,8 @@
 @forward 'header/mobile-menu';
 @forward 'header/catalog-menu';
 @forward 'header/mega-menu';
+
+
+// Item Components
+@forward 'items/item-service';
+@forward 'items/item-product';
