--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -4,3 +4,5 @@
 @forward 'home-services';
 @forward 'home-products';
 @forward 'scroll-video';
+@forward 'home-blog-grid';
+@forward 'useful-info-boxes';
