--- a/src/scss/blocks/_home-hero.scss
+++ b/src/scss/blocks/_home-hero.scss
@@ -14,6 +14,37 @@
   align-items: center;
   background-attachment: fixed;
 
+  &__video-wrapper {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 0;
+
+    .hero-video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      transform: translate(-50%, -50%);
+      object-fit: cover;
+      pointer-events: none; // no click
+      z-index: 0;
+    }
+
+    iframe.hero-video {
+      width: 300%;
+      height: 300%;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
   &__overlay {
     position: absolute;
     inset: 0;
@@ -75,7 +106,7 @@
 
   &__boxes {
     position: absolute;
-    right: 0;
+    right: 10px;
     bottom: 7vh;
     display: flex;
     gap: 1rem;
