--- a/src/scss/blocks/_home-products.scss
+++ b/src/scss/blocks/_home-products.scss
@@ -135,14 +135,21 @@
     }
   }
 
-  @media (max-width: 880px) {
+  @media (max-width: 992px) {
     &__head {
       flex-direction: column;
       align-items: flex-start;
     }
+    .rv-home-products__inner{
+      padding: 0;
+    }
 
     .rv-hp__navwrap {
       margin-left: 0;
+    }
+    .rv-hp__nav{
+      width: 40px;
+      height: 40px;
     }
   }
 }
