--- a/src/scss/blocks/_home-services.scss
+++ b/src/scss/blocks/_home-services.scss
@@ -194,4 +194,16 @@
       transform: translateY(0);
     }
   }
+  @media (max-width: 992px) {
+    .rv-home-services__head{
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .container {
+      padding: 0 1rem;
+    }
+    .rv-home-services__subtitle{
+      width: 100%;
+    }
+  }
 }
