--- a/src/scss/blocks/_home_history.scss
+++ b/src/scss/blocks/_home_history.scss
@@ -12,10 +12,22 @@
     position: absolute;
     top: 0;
     right: -40%;
-    width: 60%;
+    width: 80%;
     height: 100%;
-    background: radial-gradient(circle at center, rgba(23, 184, 58, 0.47) 0%, rgba(0, 177, 90, 0) 65%);
+    background: radial-gradient(circle at center, rgba(23, 184, 58, 0.4) 0%, rgba(0, 177, 90, 0) 65%);
     pointer-events: none;
+    animation: floatGlow 2s ease-in-out infinite alternate;
+  }
+
+  @keyframes floatGlow {
+    0% {
+      transform: translateY(-10px);
+      opacity: 0.5;
+    }
+    100% {
+      transform: translateY(2vh);
+      opacity: 1;
+    }
   }
 
   &__inner {
