--- a/src/scss/components/items/_item-product.scss
+++ b/src/scss/components/items/_item-product.scss
@@ -207,4 +207,13 @@
   input[type="checkbox"] {
     display: none;
   }
+
+  @media screen and (max-width: 768px) {
+    &:hover {
+      .rv-product-card__btn {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
 }
