--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -6,3 +6,7 @@
 @forward 'scroll-video';
 @forward 'home-blog-grid';
 @forward 'useful-info-boxes';
+@forward 'inner-hero';
+@forward 'grid-services';
+@forward 'faq-section';
+@forward 'extra-services-boxes';
