--- a/src/scss/components/header/_mega-menu.scss
+++ b/src/scss/components/header/_mega-menu.scss
@@ -8,7 +8,7 @@
   width: 100%;
   max-width: 900px;
   height: 95vh;
-  background: #dedede;
+  background: rgba(255, 255, 255, 0.8);
   z-index: 9999;
   border-radius: 20px;
   visibility: hidden;
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: clip;
 }
 
 .mega-columns {
