--- a/src/scss/components/header/_sticky-header.scss
+++ b/src/scss/components/header/_sticky-header.scss
@@ -62,6 +62,11 @@ html {
         background: $primary-color;
       }
     }
+    .desktop-menu-button {
+      .line{
+        background: $primary-color;
+      }
+    }
   }
 
   // Smooth transition for admin bar
