--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -3,3 +3,4 @@
 @forward 'services/characteristics';
 @forward 'services/products';
 @forward 'services/banner';
+@forward 'services/fullscreen-content';
