--- a/src/scss/blocks/_scroll-video.scss
+++ b/src/scss/blocks/_scroll-video.scss
@@ -6,7 +6,7 @@
     position: relative;
     width: 100% !important;
     max-width: 100% !important;
-    min-height: 100vh;
+    height: 100vh;
     background: #000;
     overflow: hidden;
 
