--- a/src/scss/pages/services/_banner.scss
+++ b/src/scss/pages/services/_banner.scss
@@ -39,7 +39,7 @@
   }
 
   &__title {
-    font-size: clamp(1.8rem, 5vw, 4.5rem);
+    font-size: clamp(1.5rem, 5vw, 4.5rem);
     color: #fff;
     font-weight: 400;
     line-height: 1.25;
@@ -54,7 +54,7 @@
 
   &__desc {
     color: #fff;
-    font-size: clamp(22px, 4vw, 28px);
+    font-size: clamp(18px, 4vw, 28px);
     line-height: 1.35;
   }
 
@@ -83,6 +83,7 @@
     &__inner {
       grid-template-columns: 1fr;
       text-align: left;
+      padding: 0;
     }
 
     &__right {
