--- a/src/scss/components/header/_shop-header.scss
+++ b/src/scss/components/header/_shop-header.scss
@@ -4,8 +4,18 @@
 .header-shop {
   color: #fff;
   background-color: transparent;
-  position: relative;
-  z-index: 50;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  transform: translateY(0);
+  transition: transform .3s
+  ease-in-out, background-color .3s
+  ease, box-shadow .3s
+  ease;
+  will-change: transform, background-color, box-shadow;
 
   a {
     color: #fff;
