--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -9,6 +9,7 @@
 @forward 'header/mobile-menu';
 @forward 'header/catalog-menu';
 @forward 'header/mega-menu';
+@forward 'header/login_modal';
 
 
 // Item Components
