--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -7,7 +7,7 @@
 @use 'sass:color';
 
 body {
-  background-color: $white;
+  background-color: #F6F6F6;
   color: $dark-color;
   font-family: $font-family-base !important;
   -webkit-font-smoothing: antialiased;
