--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -10,3 +10,7 @@
 @forward 'grid-services';
 @forward 'faq-section';
 @forward 'extra-services-boxes';
+@forward "characteristics";
+@forward "contact-infos";
+@forward "contact-location";
+@forward "contact-form";
