--- a/src/scss/components/header/_catalog-menu.scss
+++ b/src/scss/components/header/_catalog-menu.scss
@@ -62,12 +62,22 @@
 }
 
 .mega-close {
-  background: none;
-  border: none;
-  background: transparent !important;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 1.5rem;
+  right: 1.5rem;
+  background: transparent;
+  border: 1px solid $secondary-color;
   color: $primary-color;
-  font-size: 2rem;
+  padding: 6px;
+  border-radius: 6px;
   cursor: pointer;
+  font-size: 14px;
+  &:hover{
+    background: #fff;
+    color: #000;
+  }
 }
 
 .mega-grid {
